ClientApp/src/components/itemInfoHeader/itemInfoHeader.module.scss
.itemsContainer {
  height: 3rem;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  box-shadow: 1px 2px 5px rgb(0 0 0 / 20%);

  .itemTitle {
    width: 40%;
    margin: 0;
  }

  .loaderSpacer {
    line-height: 3rem;
  }
}

.itemSaveStatus {
  width: 20%;
}

